# Final_year_thesis

./: .gitignore  README.md  pyproject.toml
configs/: nonstationary.yaml  stationary.yaml
experiments/: __init__.py  run_ablation.py  run_nonstationary.py  run_stationary.py
experiments/validation/: step0_verify_design.py  step1_metrics_report.py  step2_significance_tests.py  step3_effect_size.py  step4_personalization.py  step4_personalization_conditional.py  step5_plots.py
src/bandit_thesis/: __init__.py  experiment.py
src/bandit_thesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bandit_thesis/agents/: __init__.py  hybrid_agent.py  logistic_ts.py  probit_ts.py  random_agent.py  ts_agent.py
src/bandit_thesis/envs/: __init__.py  ad_env.py  shifts.py
src/bandit_thesis/features/: __init__.py  featurizer.py
src/bandit_thesis/metrics/: __init__.py  cold_start.py  ctr.py  regret.py
src/bandit_thesis/models/: __init__.py  bayes_probit.py  bayesian_fm.py
src/bandit_thesis/utils/: __init__.py  io.py  rng,py
src/bandit_thesis/validation/: __init__.py  protocols.py  reporting.py  stat_tests.py
